--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,12 +27,24 @@ body {
   margin: 0; /* Remove default margin */
   color: white; /* Set text color to white */
 }
+.cube:hover {
+  transform:  rotateX(7deg);
+}
+
 /* Example for adjusting settings in landscape mode */
 @media (max-width: 768px) and (orientation: landscape) {
   body {
     background-size: contain;
     min-height: 100vh;
   }
+}
+
+a {
+  transition: color 0.3s ease-in-out;
+}
+
+a:hover {
+  color: #0afbeb;  /* Bright color to highlight the link */
 }
 
 p{
@@ -44,4 +56,46 @@ p{
   body {
     background-position: top center; /* Adjust as needed */
   }
+}.scene {
+  perspective: 1000px;  /* Depth effect for the 3D transform */
+  width: 100%;  /* Full width to handle responsiveness */
+  height: 300px; /* Fixed height to maintain cube appearance */
+  margin: 0 auto; /* Centering the scene horizontally */
+  position: relative;
+}
+ 
+.cube {
+  width: 100%;
+  height: 100%;
+  position: absolute; /* Positioned relative to its parent */
+  transform-style: preserve-3d; /* Children exist in 3D space */
+  transition: transform 1s; /* Smooth transition for the flip */
+}
+
+.cube.is-flipped {
+  transform: rotateY(180deg); /* Flip to show the back face */
+}
+ 
+@media (max-width: 768px) {
+  .cube {
+    transform: scale(0.8); /* Scale down the cube on smaller screens */
+  }
+}
+
+.cube__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; /* Center content horizontally */
+  align-items: center; /* Center content vertically */
+  backface-visibility: hidden; /* Hide the back of the face */
+}
+
+.cube__face--front {
+  transform: rotateY(0deg) translateZ(150px); /* Adjust based on half the depth */
+}
+
+.cube__face--back {
+  transform: rotateY(180deg) translateZ(150px); /* Rotate and pull forward to match front */
 }
