--- a/frontend/src/Music/Songs.css
+++ b/frontend/src/Music/Songs.css
@@ -1,11 +1,11 @@
 .music-downloader-container {
   max-width: 600px;
-  margin: 20px auto;
-  padding: 20px;
+   
+  padding: 200px;
   border: 3px solid #000000;
   border-radius: 20px;
   background-color: #f9f9f9;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+ 
 }
 .app-container {
   display: flex;
@@ -16,11 +16,19 @@
 h1 {
   color: black; /* Set text color to black for h2 elements */
 }
+a {
+  transition: color 0.3s ease-in-out;
+}
+
+a:hover {
+  color: #08fc62;  /* Bright color to highlight the link */
+}
+
 .music-downloader-container, .playlist-downloader-container {
   flex: 1; /* Each child will take equal width */
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  padding: 30px;
+  border: 0px solid #ccc;
+  
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
