--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
   background-image: url('/Music.png');
   background-size: cover;   /* Cover the entire page */
   background-position: center; /* Center the background image */
-  background-repeat: repeat; /* Do not repeat the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
   height: 100vh; /* Full height */
   margin: 0; /* Remove default margin */
   color: white; /* Set text color to white */
