--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 /* src/index.css */
 body {
-  background-image: url('/Music.png');
+  /* background-image: url('/Music.png'); */
   background-color: black;
   background-size: cover;   /* Cover the entire page */
   background-position: center; /* Center the background image */
