--- a/src/Music/Songs.css
+++ b/src/Music/Songs.css
@@ -3,7 +3,7 @@
   padding: 30px; /* Adjusted padding */
   border: 3px solid #000000;
   border-radius: 20px;
-  background-color: #f9f9f9;
+  background-color: #d72121;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
